@startuml
title MusicInteractionFramework - Loader API

abstract class Loader {
  +name
  +format
  +load(input)
}

class LoaderResult {
  +session
  +provenance
  +warnings
  +metadata
}

class LoaderRegistry {
  +register(format, loader)
  +get(format)
  +has(format)
}

class JsonSessionLoader
class Session

Loader <|-- JsonSessionLoader
Loader --> LoaderResult : returns
LoaderResult --> Session : contains
LoaderRegistry --> Loader : stores

@enduml
